bad/return_bool_in_func_returning_class.example_compiler_output
ERROR
[1mbad/return_bool_in_func_returning_class.lat:4:19: [1;31merror: [0;1mreturned value of type `boolean` is not convertible to return type `Y`[m
Y test() { return true; }
                  [1;32m^[m
